# ms-proteomics-tools

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  pyproject.toml
.github/: CONTRIBUTING.md  README.md  SECURITY.md  TROUBLESHOOTING.md  copilot-instructions.md
.github/workflows/: codeql.yml
docs/: reference _literature.md
programs/: filter_fasta_gui.py
programs/mspp_app/: MSPP_Plotter.spec  MSPP_data_analysis.ipynb  gui_app.py  logic.py  plot.py
programs/mspp_web/: README.md  launch_app.py
programs/mspp_web/backend/: __init__.py  app.py  logic.py
programs/mspp_web/frontend/: package-lock.json  vite.config.ts
programs/python/: MSPP_data_analysis.ipynb  MSPP_data_analysis.qmd  filter_fasta_gui.py
scripts/: setup_dev.ps1  setup_dev.py  setup_dev.sh
scripts/launch/: Launch_Desktop_App.bat  Launch_MSPP_App.bat  Launch_MSPP_App.sh  Launch_MSPP_App_Prod.bat  Launch_MSPP_App_Prod.sh  Launch_Web_App.bat  Launch_Web_App.sh  desktop_app.py  launcher.py  web_launcher.py
tests/: debug_regex.py
tests/debug/: debug_path.py
